--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <link href="css/style.css" rel="stylesheet">
   <script src = "scripts/dropdowns.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
   <title></title>
  </head>
  <body>
@@ -22,9 +23,9 @@
                      </button>
                 </div>
                 <div id="search-dropdown" class="search-dropdown-content">
-                        <a href="#home">Home</a>
-                        <a href="#about">About</a>
-                        <a href="#contact">Contact</a>
+                        <option>men</option>
+                        <option>women</option>
+                        <option>kids</option>
                 </div>
             </div>
                 <div id="logo-bar-login-btn">  
