--- a/Fooseshoes/Fooseshoes.WebSite/index.html
+++ b/Fooseshoes/Fooseshoes.WebSite/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title></title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <link href="css/styles.css" rel="stylesheet">
-    <script src="scripts/dropdowns.js"></script>
-    <script src="scripts/switchLoginRegister.js"></script>
+    <script src="js/dropdowns.js"></script>
+    <script src="js/slider.js"></script>
+    <script src="js/switchLoginRegister.js"></script>
     <link href="Content/bootstrap.min.css" rel="stylesheet">
     <script src="scripts/bootstrap.min.js"></script>
     <script src="scripts/jquery-3.0.0.min.js"></script>
@@ -37,11 +39,86 @@
         </div>
 
         <div id="nav-bar">
-
+            <div class="nav-bar-btns">
+                <a>Home</a>
+                <a>Products</a>
+                <a>About</a>
+                <a>Pages</a>
+                <a>Blog</a>
+                <a>Contact</a>
+            </div>
+            <div class="nav-bar-btns">
+                <a><i class="far fa-star" id="star-icon"></i><div id="stared">30</div></a>
+                <a><i class="fa fa-shopping-cart" id="cart-icon"></i><div id="in-cart">0</div></a>
+            </div>
         </div>
 
     </header>
     <main>
+        <div>
+            <div class="slides-active">
+                <div class="slider-text">
+                    <div class="price">$145,99</div>
+                    <p class="slider-text-header">Pink Shoes</p>
+                    <p class="slider-text-header">2013 Collection</p>
+                    <p class="slider-ordinar-text">Nunc non fermentum nunc. Sed ut ante eget leo tempor consequat sit amet eu orci. Donec cignissim dolor eget...</p>
+                    <div class="icon-bar"><a class="slider-image-icon"><i class="fa fa-eye slider-icon"></i></a>
+                    <a class="slider-image-icon"><i class="far fa-star slider-icon"></i></a>
+                    <a class="slider-image-icon"><i class="glyphicon glyphicon-log-out slider-icon"></i></a>
+                    <a class="slider-image-icon"><i class="fa fa-cart-arrow-down slider-icon"></i></a></div>
+                </div>                
+            </div>
+            <div class="slides">
+                <div class="slider-text"></div>
+            </div>
+            <div class="slides">
+                <div class="slider-text"></div>
+            </div>
+        </div>
+        <div class="slider">
+            <button class="slider-button" onclick="currentDiv(1)">
+                <div class="slider-status-margin">
+                    <div class="slider-status-active">
+                    </div>
+                </div>
+                <div>
+                    <p class="slider-status-legend-header-active">
+                        Pink Shoes
+                    </p>
+                    <p class="slider-status-legend">
+                        Now at $ 145,99.
+                    </p>
+                </div>
+            </button>
+            <button class="slider-button" onclick="currentDiv(2)">
+                <div class="slider-status-margin">
+                    <div class="slider-status">
+                    </div>
+                </div>
+                <div>
+                    <p class="slider-status-legend-header">
+                        Anna Field
+                    </p>
+                    <p class="slider-status-legend">
+                        Limited edition.
+                    </p>
+                </div>
+            </button>
+            <button class="slider-button" onclick="currentDiv(3)">
+                <div class="slider-status-margin">
+                    <div class="slider-status">
+                    </div>
+                </div>
+                <div>
+                    <p class="slider-status-legend-header">
+                        Prada
+                    </p>
+                    <p class="slider-status-legend">
+                        Summer is comming.
+                    </p>
+                </div>
+            </button>
+        </div>
         <div class="container pb-modalreglog-container">
             <div class="row">
                 <div class="col-xs-12 col-md-4 col-md-offset-4">
@@ -63,7 +140,7 @@
                                 </div>
 
                                 <div class="modal-body">
-                                    <form id= "login-form">
+                                    <form id="login-form">
                                         <div class="form-group">
                                             <label for="email">
                                                 Email
@@ -172,9 +249,9 @@
                                         Sign up
                                     </button>
                                 </div>
-                            </div>                            
+                            </div>
                         </div>
-                    </div>                    
+                    </div>
                 </div>
             </div>
         </div>
