added product tile

--- a/Fooseshoes/Fooseshoes.WebSite/index.html
+++ b/Fooseshoes/Fooseshoes.WebSite/index.html
@@ -37,7 +37,6 @@
                 </button>
             </div>
         </div>
-
         <div id="nav-bar">
             <div class="nav-bar-btns">
                 <a>Home</a>
@@ -52,7 +51,6 @@
                 <a><i class="fa fa-shopping-cart" id="cart-icon"></i><div id="in-cart">0</div></a>
             </div>
         </div>
-
     </header>
     <main>
         <div>
@@ -118,6 +116,35 @@
                     </p>
                 </div>
             </button>
+        </div>
+        <div class="special-offers">
+            <div id="on-sale" class="special-offers-item"><div class="special-offers-item-badge">ON SALE</div></div>
+            <div id="must-have" class="special-offers-item"><div class="special-offers-item-badge">SPECIAL OFFERS</div></div>
+            <div id="special-offers" class="special-offers-item"><div class="special-offers-item-badge">MUST HAVE</div></div>
+            <div id="must-have"></div>
+        </div>
+        <div class="home-products">
+            <div class="home-products-legend"><div>New arrivals on FooseShoes</div><a class="show-all-btn">Show All</a></div>
+            <div class="items">
+                <div class="shoe-with-discription">
+                    <div class="shoe"></div><div class="shoe-legend">
+                        <div class="icon-bar">
+                            <a class="shoe-image-icon"><i class="fa fa-eye slider-icon"></i></a>
+                            <a class="shoe-image-icon"><i class="far fa-star slider-icon"></i></a>
+                            <a class="shoe-image-icon"><i class="glyphicon glyphicon-log-out slider-icon"></i></a>
+                            <a class="shoe-image-icon"><i class="fa fa-cart-arrow-down slider-icon"></i></a>
+                        </div>
+                    </div><div class="shoe-price">$145,99</div><div class="out-of-stock">OUT OF STOCK</div>
+                </div>
+                <div class="shoe-with-discription"><div class="shoe"></div><div class="shoe-legend">Even&Odd</div><div class="shoe-price">$145,99</div><div class="sale">ON SALE!</div></div>
+                <div class="shoe-with-discription"><div class="shoe"></div><div class="shoe-legend">Even&Odd</div><div class="shoe-price">$145,99</div><div class="sale">ON SALE!</div></div>
+            </div>
+            <div class="home-products-legend"><div>Best sellers of the month</div><a class="show-all-btn">Show All</a></div>
+            <div class="items">
+                <div class="shoe-with-discription"><div class="shoe"></div><div class="shoe-legend">Even&Odd</div><div class="shoe-price">$145,99</div><div class="out-of-stock">OUT OF STOCK</div></div>
+                <div class="shoe-with-discription"><div class="shoe"></div><div class="shoe-legend">Even&Odd</div><div class="shoe-price">$145,99</div><div class="sale">ON SALE!</div></div>
+                <div class="shoe-with-discription"><div class="shoe"></div><div class="shoe-legend">Even&Odd</div><div class="shoe-price">$145,99</div><div class="sale">ON SALE!</div></div>
+            </div>
         </div>
         <div class="container pb-modalreglog-container">
             <div class="row">
